--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent any
     stages{
-        stage(){
+        stage("Stage 1"){
             steps{
                 echo 'Welcome to first declarative pipeline';
             }
