--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,8 @@ pipeline{
         stage("Stage 1"){
             steps{
                 echo 'Welcome to first declarative pipeline';
-                sh'whoami';
+                sh 'whoami';
+                sh 'sudo apt update';
             }
         }
     }
